[gd_scene load_steps=4 format=3 uid="uid://b304dbau6832q"]

[ext_resource type="Script" path="res://enemies/ranged_enemy.gd" id="1_aogtu"]
[ext_resource type="Script" path="res://other/hurt_box.gd" id="3_3pvpi"]
[ext_resource type="PackedScene" uid="uid://bd3xmx66156kc" path="res://other/health.tscn" id="4_p5sgm"]

[node name="RangedEnemy" type="Area2D" groups=["enemies"]]
collision_layer = 32
collision_mask = 0
script = ExtResource("1_aogtu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Muzzle" type="Marker2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("3_3pvpi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
debug_color = Color(0.988235, 0, 0, 0.419608)

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]

[node name="Health" parent="." instance=ExtResource("4_p5sgm")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="FreezeTimer" type="Timer" parent="."]
one_shot = true

[node name="RandomSpreadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="unfreeze"]
